--- a/civil.html
+++ b/civil.html
@@ -84,6 +84,19 @@
                
             } 
         }
+        @media only screen and (max-width: 740px) {
+            .form{
+                height:100%;
+                width:300px;
+                background-color: white;
+                padding:20px;
+                border: 2px  solid red;
+                border-radius: 10px;
+            } 
+            .container{
+                margin-top: 50px;
+            }
+        }
         @media only screen and (max-width: 400px) {
             .form{
                 height:100%;
@@ -112,12 +125,12 @@
         </select><br>
         <label for="dropdown">Choose Team:</label>
         <select id="dropdown" name="team">
-            <option value="SMART APP ASSISTED COLORIMETRIC DETERMINATION OF IRON IN GROUND WATER : A CASE STUDY IN UDUPI DISTRICT, KARNATAKA">SMART APP ASSISTED COLORIMETRIC DETERMINATION OF IRON IN GROUND WATER : A CASE STUDY IN UDUPI DISTRICT, KARNATAKA</option>
-            <option value="FEASIBILITY STUDY ON COWCRETE: A COMPREHENSIVE APPROACH TO STUDY COW MANURE AS A PARTIAL REPLACEMENT TO CONCRETE FOR VEDIC CONSTRUCTION PRACTICES">FEASIBILITY STUDY ON COWCRETE: A COMPREHENSIVE APPROACH TO STUDY COW MANURE AS A PARTIAL REPLACEMENT TO CONCRETE FOR VEDIC CONSTRUCTION PRACTICES</option>
-            <option value="DEVELOPMENT OF ANDROID APP ON SCHEDULING PAYMENTS AND FINANCIAL MANAGEMENT IN CONSTRUCTION INDUSTRIES">STUDY ON PERFORMANCE OF CONCRETE FOR PARTIAL REPLACEMENT OF COARSE AGGREGATE USING E-WASTE
+            <option value="Smart app assisted colorimetric determination of iron in ground water: A case study in Udupi district, Karnataka">Smart app assisted colorimetric determination of iron in ground water: A case study in Udupi district, Karnataka</option>
+        <option value="Feasibility study on cowcrete: A comprehensive approach to study cow manure as a partial replacement to concrete for Vedic construction practices">Feasibility study on cowcrete: A comprehensive approach to study cow manure as a partial replacement to concrete for Vedic construction practices</option>
+        <option value="Development of Android app on scheduling payments and financial management in construction industries">Study on performance of concrete for partial replacement of coarse aggregate using e-waste
 
-            </option>
-             <option value="STUDY ON PERFORMANCE OF CONCRETE FOR PARTIAL REPLACEMENT OF COARSE AGGREGATE USING E-WASTE">DEVELOPMENT OF ANDROID APP ON SCHEDULING PAYMENTS AND FINANCIAL MANAGEMENT IN CONSTRUCTION INDUSTRIES</option>
+        </option>
+        <option value="Study on performance of concrete for partial replacement of coarse aggregate using e-waste">Development of Android app on scheduling payments and financial management in construction industries</option>
             <!-- Add more options as needed -->
         </select><br>
         <label for="innovation">Innovation</label>
