--- a/mech.html
+++ b/mech.html
@@ -105,7 +105,7 @@
         font-weight: 600;">MECHANICAL</h1>
     <form name="submit-to-google-sheet" class="form">
         <label>Name    </label><select id="dropdown" name="name">
-            <option value="Dr. Manjunath S">Dr. Manjunath S</option>
+            <option value="Mr. N Madhusoodhan Rao">Mr. N Madhusoodhan Rao</option>
             <option value="Dr. Manjunath S">Dr. Manjunath S</option>
            
             <!-- Add more options as needed -->
