--- a/civil.html
+++ b/civil.html
@@ -135,8 +135,7 @@
         </select><br>
         <label for="innovation">Innovation</label>
 <input type="number" id="innovation" name="innovation" placeholder="Enter marks" required><br>
-<label for="Real Time 
-Applications">Real Time Applications</label>
+<label for="Real Time Applications">Real Time Applications</label>
 <input type="number" id="application" name="application" placeholder="Enter marks" required><br>
 <label for="Societal Impact">Societal Impact</label>
 <input type="number" id="presentation" name="Societal Impact" placeholder="Enter marks" required><br>
