--- a/mech.html
+++ b/mech.html
@@ -120,7 +120,7 @@
         <label for="innovation">Innovation</label>
 <input type="number" id="innovation" name="innovation" placeholder="Enter marks" required><br>
 <label for="RTA">Real Time Applications</label>
-<input type="number" id="application" name="application" placeholder="Enter marks" required><br>
+<input type="number" id="application" name="RTA" placeholder="Enter marks" required><br>
 <label for="Societal Impact">Societal Impact</label>
 <input type="number" id="presentation" name="Societal Impact" placeholder="Enter marks" required><br>
 <label for="Demo">Demo</label>
