--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@
         .button:hover {
             background-color: #45a049;
         }
+        label{
+            color: rgb(233, 77, 63);
+            font-weight: 600;
+            font-size:20px;
+        }
     </style>
 </head>
 <body>
     <div class="cont">
-    <a href="mech.html" class="button"><img src="mech.png" height="100"></a><br>
-    <a href="civil.html" class="button"><img src="civ.png" height="100"></a>
+   
+   <a href="mech.html" class="button"><img src="mech.png" height="100"></a><br>
+   <center><label>MECHANICAL </label><br></center><br>
+    <a href="civil.html" class="button"><img src="civ.png" height="100"></a><br>
+    <center><label>CIVIL</label></center> 
 </div>
 </body>
 </html>
