--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             font-weight: 600;
             font-size:20px;
         }
+        .cont1{
+            text-align: center;
+        }
         @media only screen and (max-width: 400px) {
             h1{
                 color: rgb(233, 77, 63);
